Fix experiences alignment

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -99,3 +99,7 @@ p {
 .modal-open {
   overflow: hidden;
 }
+
+.ml-0 {
+  margin-left: 0 !important;
+}
